[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gites"
version = "0.5.2"
description = "Deterministic local multi-repo checkpointing for repo families."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Pak Kin LAU", email = "kinlau529@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pakkinlau/gites"

[project.scripts]
gites = "gites.cli:main"

[tool.setuptools.packages.find]
include = ["gites*"]
